# seedwake

./: .dockerignore  .env.en.example  .env.example  .env.zh.example  .gitignore  AGENTS.md  BACKGROUND.md  ISSUE.md  ISSUE_ZH.md  LICENSE  NOTES.md  PROMPT.md  README.md  README_ZH.md  SPECS.md  config.example.en.yml  config.example.yml  config.example.zh.yml  dictionary.dic  docker-compose.yml  pyproject.toml  schema.sql  test_support.py
backend/: Dockerfile  __init__.py  auth.py  deps.py  main.py  requirements.txt
backend/routes/: __init__.py  conversation.py  query.py  stream.py
bot/: Dockerfile  __init__.py  helpers.py  main.py  requirements.txt
core/: action.py  attention.py  camera.py  common_types.py  cycle.py  embedding.py  emotion.py  logging.py  main.py  manas.py  metacognition.py  model_client.py  openclaw_gateway.py  perception.py  prefrontal.py  prompt_builder.py  rss.py  runtime.py  sleep.py  state.py  stimulus.py  thought_parser.py  types.py
core/i18n/: __init__.py  en.py  zh.py
core/memory/: habit.py  identity.py  long_term.py  short_term.py
designs/: app.jsx  index.html  left-panel.jsx  stream-panel.jsx  styles.css  thoughts-data.js
docs/: concepts.md  concepts_zh.md  deployment.md  deployment_zh.md
frontend/: .env.example  .gitignore  app.vue  mise.toml  nuxt.config.ts  package.json  pnpm-lock.yaml
frontend/components/: ActionList.vue  ConversationList.vue  CycleSeparator.vue  DeepVeil.vue  DevToggle.vue  LeftPanel.vue  (+6 more)
scripts/: i18n_migration_plan.md
tests/: test_backend.py  test_bot.py  test_phase1.py  test_phase2.py  test_phase3.py
(+15 files in other folders)
